# RaytracingOpenGL

./: .gitmodules  CMakeLists.txt  README.md
include/: camera.h  error.h  inputhandler.h  objectrenderer.h  scene.h  sceneobject.h  shader.h
shaders/: shader.frag  shader.vert
src/: camera.cpp  inputhandler.cpp  main.cpp  objectrenderer.cpp  scene.cpp  sceneobject.cpp  shader.cpp
